# 2025_yuletide_wisher

./: .gitignore  email_connector.py  main.py  message_generator.py  pyproject.toml  yul_logger.py
